first builds of react app

--- a/app.json
+++ b/app.json
@@ -1,16 +1,4 @@
 {
-  "expo": {
-    "name": "ResumeAI",
-    "slug": "resume-ai",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "userInterfaceStyle": "light",
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.resumeai"
-    },
-    "android": {
-      "package": "com.anonymous.resumeai"
-    }
-  }
+  "name": "ResumeAI_ReactNative",
+  "displayName": "ResumeAI"
 }
