--- a/package.json
+++ b/package.json
@@ -3,47 +3,35 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "expo": "expo",
-    "expo:start": "expo start",
-    "expo:android": "expo start --android",
-    "expo:ios": "expo start --ios",
-    "expo:web": "expo start --web"
+    "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.5",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
-    "@tanstack/react-query": "^4.35.0",
-    "axios": "^1.5.0",
-    "expo": "^53.0.20",
-    "expo-dev-client": "^5.2.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-document-picker": "^9.3.1",
-    "react-native-gesture-handler": "^2.13.4",
-    "react-native-paper": "^5.11.1",
-    "react-native-reanimated": "^3.5.4",
-    "react-native-safe-area-context": "^4.7.4",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "react-native-screens": "^3.27.0",
-    "react-native-toast-message": "^2.1.7",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-paper": "^5.11.1",
+    "@react-native-async-storage/async-storage": "^1.19.5",
+    "axios": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native-community/cli": "latest",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
-    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
@@ -51,7 +39,8 @@
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "@react-native-community/cli": "^11.3.7"
   },
   "engines": {
     "node": ">=16"
